[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "darkseer"
version = "0.1.0"
description = "lorem ipsum.."
authors = ["boonhapus <me@boonhap.us>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = ">=1.4"
pydantic = "*"
httpx = "*"
asyncpg = "*"
rich = "*"
typer = "*"
toml = "*"
aiofiles = "*"

[tool.poetry.dev-dependencies]
ipykernel = "^5.2.0"

[tool.poetry.scripts]
darkseer = "scripts.cli:run"

[tool.ward]
path = ["tests"]
